--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -27,7 +27,7 @@
         </p>
         <p>
             {{ form.password2.label }}<br>
-            {{ form.password2(size32) }}<br>
+            {{ form.password2(size=32) }}<br>
             {% for error in form.password2.errors %}
             <span style="color:red;">[{{ error }}]</span>
             {% endfor %}
